fixing spacing issues

--- a/less/nav-primary.less
+++ b/less/nav-primary.less
@@ -1,5 +1,7 @@
 .nav-primary {
   border-bottom: 8px solid @msu-gold;
+    padding-top: @space-md;
+    padding-bottom: @space-md;
 
   &.navbar-default {
     background: @msu-gold;
